add pipeline job inventory endpoint
