# api/controllers/logs/controller.go
@@ -74,6 +74,12 @@ func (c *controller) Endpoints() []controllers.Endpoint {
 			Handler:               c.GetJobContainerLog,
 			AuthorizationPolicies: []string{constants.AuthorizationPolicyAppAdmin},
 		},
+		{
+			Method:                http.MethodGet,
+			Path:                  "/applications/:appName/pipelinejobs/:pipelineJobName",
+			Handler:               c.GetPipelineJobInventory,
+			AuthorizationPolicies: []string{constants.AuthorizationPolicyAppAdmin},
+		},
 	}
 }
 
@@ -100,7 +106,7 @@ func (c *controller) GetComponentInventory(ctx *gin.Context) {
 		params.Component
 	}
 	if err := ctx.BindUri(&params); err != nil {
-		ctx.AbortWithError(http.StatusInternalServerError, err)
+		_ = ctx.AbortWithError(http.StatusInternalServerError, err)
 		return
 	}
 
@@ -134,7 +140,7 @@ func (c *controller) GetComponentLog(ctx *gin.Context) {
 		params.Component
 	}
 	if err := ctx.BindUri(&params); err != nil {
-		ctx.AbortWithError(http.StatusInternalServerError, err)
+		_ = ctx.AbortWithError(http.StatusInternalServerError, err)
 		return
 	}
 
@@ -170,7 +176,7 @@ func (c *controller) GetComponentReplicaLog(ctx *gin.Context) {
 		params.Replica
 	}
 	if err := ctx.BindUri(&params); err != nil {
-		ctx.AbortWithError(http.StatusInternalServerError, err)
+		_ = ctx.AbortWithError(http.StatusInternalServerError, err)
 		return
 	}
 
@@ -208,7 +214,7 @@ func (c *controller) GetComponentContainerLog(ctx *gin.Context) {
 		params.Container
 	}
 	if err := ctx.BindUri(&params); err != nil {
-		ctx.AbortWithError(http.StatusInternalServerError, err)
+		_ = ctx.AbortWithError(http.StatusInternalServerError, err)
 		return
 	}
 
@@ -242,7 +248,7 @@ func (c *controller) GetJobInventory(ctx *gin.Context) {
 		params.Job
 	}
 	if err := ctx.BindUri(&params); err != nil {
-		ctx.AbortWithError(http.StatusInternalServerError, err)
+		_ = ctx.AbortWithError(http.StatusInternalServerError, err)
 		return
 	}
 
@@ -278,7 +284,7 @@ func (c *controller) GetJobLog(ctx *gin.Context) {
 		params.Job
 	}
 	if err := ctx.BindUri(&params); err != nil {
-		ctx.AbortWithError(http.StatusInternalServerError, err)
+		_ = ctx.AbortWithError(http.StatusInternalServerError, err)
 		return
 	}
 
@@ -316,7 +322,7 @@ func (c *controller) GetJobReplicaLog(ctx *gin.Context) {
 		params.Replica
 	}
 	if err := ctx.BindUri(&params); err != nil {
-		ctx.AbortWithError(http.StatusInternalServerError, err)
+		_ = ctx.AbortWithError(http.StatusInternalServerError, err)
 		return
 	}
 
@@ -356,7 +362,7 @@ func (c *controller) GetJobContainerLog(ctx *gin.Context) {
 		params.Container
 	}
 	if err := ctx.BindUri(&params); err != nil {
-		ctx.AbortWithError(http.StatusInternalServerError, err)
+		_ = ctx.AbortWithError(http.StatusInternalServerError, err)
 		return
 	}
 
@@ -365,10 +371,40 @@ func (c *controller) GetJobContainerLog(ctx *gin.Context) {
 	})
 }
 
+// GetPipelineJobInventory godoc
+// @Summary Get inventory (pods and containers) for a pipeline job
+// @Tags Inventory
+// @Produce json
+// @Security ApiKeyAuth
+// @Success 200 {object} models.InventoryResponse
+// @Failure 400 {object} errors.Status
+// @Failure 401 {object} errors.Status
+// @Failure 403 {object} errors.Status
+// @Failure 500 {object} errors.Status
+// @Param appName path string true "Application Name"
+// @Param pipelineJobName path string true "Pipeline Job Name"
+// @Param start query string false "Start time" format(date-time) example(2023-05-01T08:15:00+02:00)
+// @Param end query string false "End time" format(date-time) example(2023-05-02T12:00:00Z)
+// @Router /applications/{appName}/pipelinejobs/{pipelineJobName} [get]
+func (c *controller) GetPipelineJobInventory(ctx *gin.Context) {
+	var params struct {
+		params.App
+		params.PipelineJob
+	}
+	if err := ctx.BindUri(&params); err != nil {
+		_ = ctx.AbortWithError(http.StatusInternalServerError, err)
+		return
+	}
+
+	c.handleInventoryRequest(ctx, func(options *logservice.InventoryOptions) ([]logservice.Pod, error) {
+		return c.appLogsService.PipelineJobInventory(ctx.Request.Context(), params.AppName, params.PipelineJobName, options)
+	})
+}
+
 func (c *controller) handleInventoryRequest(ctx *gin.Context, inventorySource func(options *logservice.InventoryOptions) ([]logservice.Pod, error)) {
 	queryParams, err := paramsFromContext[inventoryParams](ctx)
 	if err != nil {
-		ctx.Error(apierrors.NewBadRequestError(apierrors.WithCause(err)))
+		_ = ctx.Error(apierrors.NewBadRequestError(apierrors.WithCause(err)))
 		ctx.Abort()
 		return
 	}
@@ -376,7 +412,7 @@ func (c *controller) handleInventoryRequest(ctx *gin.Context, inventorySource fu
 	options := queryParams.AsInventoryOptions()
 	pods, err := inventorySource(&options)
 	if err != nil {
-		ctx.Error(err)
+		_ = ctx.Error(err)
 		ctx.Abort()
 		return
 	}
@@ -388,7 +424,7 @@ func (c *controller) handleInventoryRequest(ctx *gin.Context, inventorySource fu
 func (c *controller) handleLogRequest(ctx *gin.Context, logSource func(options *logservice.LogOptions) (io.Reader, error)) {
 	queryParams, err := paramsFromContext[logParams](ctx)
 	if err != nil {
-		ctx.Error(apierrors.NewBadRequestError(apierrors.WithCause(err)))
+		_ = ctx.Error(apierrors.NewBadRequestError(apierrors.WithCause(err)))
 		ctx.Abort()
 		return
 	}
@@ -396,7 +432,7 @@ func (c *controller) handleLogRequest(ctx *gin.Context, logSource func(options *
 	logOptions := queryParams.AsLogOptions()
 	logReader, err := logSource(&logOptions)
 	if err != nil {
-		ctx.Error(err)
+		_ = ctx.Error(err)
 		ctx.Abort()
 		return
 	}
