# docs/swagger.yaml
@@ -18,6 +18,9 @@ definitions:
       lastKnown:
         example: "2023-01-31T08:00:00Z"
         type: string
+      name:
+        example: web
+        type: string
     type: object
   models.InventoryResponse:
     properties:
@@ -613,6 +616,59 @@ paths:
       summary: Get log for a job replica
       tags:
       - Logs
+  /applications/{appName}/pipelinejobs/{pipelineJobName}:
+    get:
+      parameters:
+      - description: Application Name
+        in: path
+        name: appName
+        required: true
+        type: string
+      - description: Pipeline Job Name
+        in: path
+        name: pipelineJobName
+        required: true
+        type: string
+      - description: Start time
+        example: "2023-05-01T08:15:00+02:00"
+        format: date-time
+        in: query
+        name: start
+        type: string
+      - description: End time
+        example: "2023-05-02T12:00:00Z"
+        format: date-time
+        in: query
+        name: end
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.InventoryResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/errors.Status'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/errors.Status'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/errors.Status'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errors.Status'
+      security:
+      - ApiKeyAuth: []
+      summary: Get inventory (pods and containers) for a pipeline job
+      tags:
+      - Inventory
 schemes:
 - http
 - https
